<resources>
    <string name="app_name">Guess The Number</string>
    <string name="difficulty">Выберите сложность:</string>
    <string name="easy">Легкая</string>
    <string name="medium">Средняя</string>
    <string name="hard">Сложная</string>
    <string name="insane">Невозможная</string>

    <string name="guess">Угадайте число\nКоличество цифр: </string>
    <string name="help">Подсказка</string>
    <string name="enter">Ввод</string>
</resources>